--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -194,7 +194,7 @@
                     <div class="photo"><img [src]="imgpath+p3.img" alt=""></div>
                     <ul class="details">
                       <li class="author">{{p3.owner}}</li>
-                      <li class="date">{{p3.estimated_date}}</li>
+                      <li class="date"></li>
 
                     </ul>
                   </div>
