--- a/src/app/pages/djagora-academy/all-projects/all-projects.component.css
+++ b/src/app/pages/djagora-academy/all-projects/all-projects.component.css
@@ -10,7 +10,40 @@
   }
 
 
+  .wrapper1 {
+    margin-left: 1em;
+    margin-right: 1em;
+    display: grid;
+    grid-template-rows: auto;
+    grid-template-columns: repeat(3, 1fr);
+    grid-row-gap: 1em;
+    grid-column-gap: 1em;
+  }
+  @media (max-width: 767px) {
+    .wrapper1 {
+      margin-left: 1em;
+      margin-right: 1em;
+      display: grid;
+      grid-template-rows: auto;
+      grid-template-columns: repeat(1, 1fr);
+      grid-row-gap: 1em;
+      grid-column-gap: 1em;
+    }
+  }
+  
+  @media (max-width: 900px) {
+    .wrapper1 {
+      margin-left: 1em;
+      margin-right: 1em;
+      display: grid;
+      grid-template-rows: auto;
+      grid-template-columns: repeat(2, 1fr);
+      grid-row-gap: 1em;
+      grid-column-gap: 1em;
+    }
+  }
 
+  
 
 
 
@@ -146,8 +179,10 @@
 
   /*********************part3:search bar******************/
   .titre {
+    justify-content: center;
+    margin: 50px auto 50px;
+
     text-align: center;
-    margin: 80px auto 100px;
     position: relative;
     line-height: 60px;
     color: #555;
@@ -786,7 +821,6 @@
   .pag{
     margin-top: 20px;
     margin-bottom: 20px;
-    margin-left: 43%;
   }
 
 
