single training component

--- a/src/app/pages/djagora-academy/formations/formations.component.html
+++ b/src/app/pages/djagora-academy/formations/formations.component.html
@@ -63,7 +63,7 @@
                
               </ul>
               <p class="read-more">
-                <a [routerLink]="['/SingleProject',Singleformation.id]">read more</a>
+                <a [routerLink]="['/singletraining',Singleformation.id]">read more</a>
               </p>
 
 
