--- a/src/app/pages/djagora-academy/single-project/single-project.component.html
+++ b/src/app/pages/djagora-academy/single-project/single-project.component.html
@@ -77,7 +77,7 @@
         <div class="container-fluid   ">
           <section class="container">
 
-            <div class="row ms-md-5 my-md-4  ">
+            <div class="row ms-md-5 my-md-4 justify-content-center">
               <div class="col-xl-3 col-md-12  mb-4 mx-4  ">
                 <div class="card">
                   <div class="card-body">
