--- a/src/app/pages/djagora-academy/scrum/sprints/sprints.component.html
+++ b/src/app/pages/djagora-academy/scrum/sprints/sprints.component.html
@@ -14,12 +14,18 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
 </div><!-- Banner text end -->
 </div><!-- Banner area end -->
 
+<div class="titre">
+
+    <h1 name="1">project name</h1>
+</div>
 
 
 
 <div class="container">
+    <button class="btn btn-primary mb-3"  >+ Add sprint</button>
+
     <div class="row justify-content-center">
-        <div class="col-lg-4">
+        <div class="col-lg-6">
             <div class="card card-margin">
                 <div class="card-header no-border">
                     <h5 class="card-title">MOM</h5>
@@ -48,7 +54,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                 </div>
             </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-6">
             <div class="card card-margin">
                 <div class="card-header no-border">
                     <h5 class="card-title">MOM</h5>
@@ -80,7 +86,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
         
     </div>
     <div class="row justify-content-center" >
-        <div class="col-lg-4">
+        <div class="col-lg-6">
             <div class="card card-margin">
                 <div class="card-header no-border">
                     <h5 class="card-title">MOM</h5>
@@ -109,7 +115,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                 </div>
             </div>
         </div>
-        <div class="col-lg-4">
+        <div class="col-lg-6">
             <div class="card card-margin">
                 <div class="card-header no-border">
                     <h5 class="card-title">MOM</h5>
