--- a/src/app/pages/djagora-academy/scrum/boards/boards.component.html
+++ b/src/app/pages/djagora-academy/scrum/boards/boards.component.html
@@ -15,12 +15,16 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
 </div><!-- Banner text end -->
 </div><!-- Banner area end -->
 
+<div class="titre">
 
+  <h1 name="1">sprint name</h1>
+</div>
 
 
 
  <!-- START PAGE CONTAINER -->
  <div class="page-container page-navigation-toggled">
+  
             
     <!-- START PAGE SIDEBAR -->
     
@@ -35,47 +39,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                         
         <!-- START CONTENT FRAME -->
         <div class="content-frame">     
-            <!-- START CONTENT FRAME TOP -->
           
-            <!--
-            <div class="content-frame-left">
-                <div class="form-group">
-                    <h4>Add new task:</h4>
-                    <textarea class="form-control push-down-10" id="new_task" rows="4" placeholder="Your task text here..."></textarea>                            
-                    <button class="btn btn-primary" id="add_new_task"><span class="fa fa-edit"></span> Add</button>
-                </div>                        
-                <div class="form-group push-up-10">
-                    <h4>Searh in tasks:</h4>
-                    <div class="input-group">
-                        <div class="input-group-addon"><span class="fa fa-search"></span></div>
-                        <input type="text" class="form-control" placeholder="keyword..."/>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <h4>Task groups:</h4>
-                    <div class="list-group border-bottom">
-                        <a href="#" class="list-group-item"><span class="fa fa-circle text-primary"></span> Project #1</a>
-                        <a href="#" class="list-group-item"><span class="fa fa-circle text-success"></span> Personal</a>
-                        <a href="#" class="list-group-item"><span class="fa fa-circle text-warning"></span> Project #2</a>
-                        <a href="#" class="list-group-item"><span class="fa fa-circle text-danger"></span> Meetings</a>
-                        <a href="#" class="list-group-item"><span class="fa fa-circle text-info"></span> Work</a>
-                    </div>
-                </div>
-                <div class="form-group">
-                    <h4>Tags:</h4>
-                    <ul class="list-tags">
-                        <li><a href="#"><span class="fa fa-tag"></span> amet</a></li>
-                        <li><a href="#"><span class="fa fa-tag"></span> rutrum</a></li>
-                        <li><a href="#"><span class="fa fa-tag"></span> nunc</a></li>
-                        <li><a href="#"><span class="fa fa-tag"></span> tempor</a></li>
-                        <li><a href="#"><span class="fa fa-tag"></span> eros</a></li>
-                        <li><a href="#"><span class="fa fa-tag"></span> suspendisse</a></li>
-                        <li><a href="#"><span class="fa fa-tag"></span> dolor</a></li>
-                    </ul>                            
-                </div>
-                
-            </div>  -->     
-            <!-- END CONTENT FRAME TOP -->
             <div class="content-frame-left">
                 <div>
                         <!-- Split button -->
@@ -125,6 +89,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                                 <div class="pull-right"><a href="#"><span class="fa fa-chain"></span></a> <a href="#"><span class="fa fa-comments"></span></a></div>
                             </div>                                    
                         </div>
+                        <button class="btn btn-dark" style="width: 100%;" ><i class="fa-solid fa-circle-plus"></i> Add user story </button>
                         
                     </div>                            
 
@@ -149,8 +114,8 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                                       <button  class="btn btn-success" type="button" id="dropdownMenuOffset"
                                         data-bs-toggle="dropdown" data-bs-offset="10,20" aria-expanded="false" >To-do  <i class="fa-solid fa-chevron-right"></i></button>
                                       <ul class="dropdown-menu" aria-labelledby="dropdownMenuOffset">
-                                        <li class=" dropdown-item mx-2">mark as in progress</li>
-                                        <li class="dropdown-item mx-2" >mark as completed</li>
+                                        <li class=" dropdown-item ">mark as in progress</li>
+                                        <li class="dropdown-item" >mark as completed</li>
                                       </ul>
                                     </div>
                                 
@@ -243,7 +208,8 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                                     <div class="pull-right"><a href="#"><span class="fa fa-chain"></span></a> <a href="#"><span class="fa fa-comments"></span></a></div>
                                 </div>                                    
                             </div>
-                            
+                            <button class="btn btn-success" style="width: 100%;" ><i class="fa-solid fa-circle-plus"></i> Add to-do task </button>
+
                         </div>                            
 
                     </div>
@@ -269,7 +235,9 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                                 <div class="task-footer">
                                     <div class="pull-left"><span class="fa fa-clock-o"></span> 2h 55min</div>
                                     <div class="pull-right"><span class="fa fa-pause"></span> 4:51</div>
-                                </div>                                    
+                                </div> 
+                                <button class="btn btn-warning" style="width: 100%;" ><i class="fa-solid fa-circle-plus"></i> Add in progress task </button>
+                                   
                             </div>                            
                             
                             
@@ -317,7 +285,8 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                                     <div class="pull-left"><span class="fa fa-clock-o"></span> 35min</div>                                    
                                 </div>                                    
                             </div>
-                                                          
+                            <button class="btn btn-info" style="width: 100%;" ><i class="fa-solid fa-circle-plus"></i> Add completed task </button>
+                              
                         </div>
                     </div>
                 </div>                        
