--- a/src/app/pages/djagora-academy/scrum/sprints/sprints.component.css
+++ b/src/app/pages/djagora-academy/scrum/sprints/sprints.component.css
@@ -1,3 +1,24 @@
+.titre {
+  justify-content: center;
+  margin: 50px auto 50px;
+
+  text-align: center;
+  position: relative;
+  line-height: 60px;
+  color: #555;
+}
+
+.titre::after {
+  content: '';
+  background: #0081c2;
+  width: 80px;
+  height: 5px;
+  border-radius: 5px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
 .main-container .border-left {
     margin-bottom: 30px;
