--- a/src/app/pages/djagora-academy/scrum/boards/boards.component.css
+++ b/src/app/pages/djagora-academy/scrum/boards/boards.component.css
@@ -146,7 +146,7 @@
     float: left;
     min-height: 100%;
     position: relative;
-    background: #edeef0;
+    background: white;
     /* SIDEBAR */
     /* END SIDEBAR */
     /* CONTENT */
