--- a/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
@@ -26,36 +26,36 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
 
 
 
-
 <!-- Main Body -->
 <section>
     <div class="container">
+        <button routerLink="/sprint" class="btn btn-primary" >Sprints</button>
+
         <div class="row">
+            
             <div class="col-sm-5 col-md-7 col-12 pb-4">
                 <div class="comment mt-4 text-justify float-left">
-                    <div class="p-2" style="background-color: rgb(221, 221, 221); width:100%;">
-                        <h4>Jhon Doe</h4>
-                        <span>- 20 October, 2018</span>
-                    </div>
+                        <h4 style="color: #0081c2;" >Jhon Doe</h4>
+                        <span> | 20 October, 2018</span>
                    
                     <br>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
                 </div>
                 <div class="text-justify darker mt-4 float-right">
-                    <h4>Rob Simpson</h4>
-                    <span>- 20 October, 2018</span>
+                    <h4 style="color: #0081c2;">Rob Simpson</h4>
+                    <span> | 20 October, 2018</span>
                     <br>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
                 </div>
                 <div class="comment mt-4 text-justify">
-                    <h4>Jhon Doe</h4>
-                    <span>- 20 October, 2018</span>
+                    <h4 style="color: #0081c2;"> Jhon Doe</h4>
+                    <span> | 20 October, 2018</span>
                     <br>
                     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
                 </div>
                 <div class="darker mt-4 text-justify">
-                    <h4>Rob Simpson</h4>
-                    <span>- 20 October, 2018</span>
+                    <h4 style="color: #0081c2;">Rob Simpson</h4>
+                    <span> | 20 October, 2018</span>
                     <br>
                     <p >Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
                 </div>
