--- a/src/app/pages/djagora-academy/scrum/sprints/sprints.component.html
+++ b/src/app/pages/djagora-academy/scrum/sprints/sprints.component.html
@@ -28,14 +28,13 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
         <div class="col-lg-6">
             <div class="card card-margin">
                 <div class="card-header no-border">
-                    <h5 class="card-title">MOM</h5>
+                    <h5 class="card-title">Sprint</h5>
                 </div>
                 <div class="card-body pt-0">
                     <div class="widget-49">
                         <div class="widget-49-title-wrapper">
                             <div class="widget-49-date-primary">
-                                <span class="widget-49-date-day">09</span>
-                                <span class="widget-49-date-month">apr</span>
+                                <span class="widget-49-date-day">1</span>
                             </div>
                             <div class="widget-49-meeting-info">
                                 <span class="widget-49-pro-title">PRO-08235 DeskOpe. Website</span>
@@ -48,7 +47,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                             <li class="widget-49-meeting-item"><span>Session timeout increase to 30 minutes</span></li>
                         </ol>
                         <div class="widget-49-meeting-action">
-                            <a href="#" class="btn btn-sm btn-flash-border-primary">View All</a>
+                            <a href="#" class="btn btn-sm btn-flash-border-primary" routerLink="/boards">Check board</a>
                         </div>
                     </div>
                 </div>
@@ -57,14 +56,13 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
         <div class="col-lg-6">
             <div class="card card-margin">
                 <div class="card-header no-border">
-                    <h5 class="card-title">MOM</h5>
+                    <h5 class="card-title">Sprint</h5>
                 </div>
                 <div class="card-body pt-0">
                     <div class="widget-49">
                         <div class="widget-49-title-wrapper">
                             <div class="widget-49-date-warning">
-                                <span class="widget-49-date-day">13</span>
-                                <span class="widget-49-date-month">apr</span>
+                                <span class="widget-49-date-day">2</span>
                             </div>
                             <div class="widget-49-meeting-info">
                                 <span class="widget-49-pro-title">PRO-08235 Lexa Corp.</span>
@@ -77,7 +75,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                             <li class="widget-49-meeting-item"><span>Client request to send invoice</span></li>
                         </ol>
                         <div class="widget-49-meeting-action">
-                            <a href="#" class="btn btn-sm btn-flash-border-warning">View All</a>
+                            <a href="#" class="btn btn-sm btn-flash-border-warning" routerLink="/boards">Check board</a>
                         </div>
                     </div>
                 </div>
@@ -89,13 +87,13 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
         <div class="col-lg-6">
             <div class="card card-margin">
                 <div class="card-header no-border">
-                    <h5 class="card-title">MOM</h5>
+                    <h5 class="card-title">Sprint</h5>
                 </div>
                 <div class="card-body pt-0">
                     <div class="widget-49">
                         <div class="widget-49-title-wrapper">
                             <div class="widget-49-date-primary">
-                                <span class="widget-49-date-day">09</span>
+                                <span class="widget-49-date-day">3</span>
                                 <span class="widget-49-date-month">apr</span>
                             </div>
                             <div class="widget-49-meeting-info">
@@ -109,7 +107,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                             <li class="widget-49-meeting-item"><span>Session timeout increase to 30 minutes</span></li>
                         </ol>
                         <div class="widget-49-meeting-action">
-                            <a  class="btn btn-sm btn-flash-border-primary" routerLink="/boards">View All</a>
+                            <a  class="btn btn-sm btn-flash-border-primary" routerLink="/boards">Check board</a>
                         </div>
                     </div>
                 </div>
@@ -118,14 +116,13 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
         <div class="col-lg-6">
             <div class="card card-margin">
                 <div class="card-header no-border">
-                    <h5 class="card-title">MOM</h5>
+                    <h5 class="card-title">Sprint</h5>
                 </div>
                 <div class="card-body pt-0">
                     <div class="widget-49">
                         <div class="widget-49-title-wrapper">
                             <div class="widget-49-date-warning">
-                                <span class="widget-49-date-day">13</span>
-                                <span class="widget-49-date-month">apr</span>
+                                <span class="widget-49-date-day">4</span>
                             </div>
                             <div class="widget-49-meeting-info">
                                 <span class="widget-49-pro-title">PRO-08235 Lexa Corp.</span>
@@ -138,7 +135,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                             <li class="widget-49-meeting-item"><span>Client request to send invoice</span></li>
                         </ol>
                         <div class="widget-49-meeting-action">
-                            <a href="#" class="btn btn-sm btn-flash-border-warning">View All</a>
+                            <a href="#" class="btn btn-sm btn-flash-border-warning" routerLink="/boards">Check board</a>
                         </div>
                     </div>
                 </div>
