--- a/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
+++ b/src/app/pages/djagora-academy/scrum/backlog/backlog.component.html
@@ -18,13 +18,36 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
   <h1 name="1">User stories</h1>
 </div>
 
-
-
-
-
-
-
-
+<div class="example-container">
+    <h2>To do</h2>
+  
+    <div
+      cdkDropList
+      #todoList="cdkDropList"
+      [cdkDropListData]="todo"
+      [cdkDropListConnectedTo]="[doneList]"
+      class="example-list"
+      (cdkDropListDropped)="drop($event)">
+      <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+    </div>
+  </div>
+  
+  <div class="example-container">
+    <h2>Done</h2>
+  
+    <div
+      cdkDropList
+      #doneList="cdkDropList"
+      [cdkDropListData]="done"
+      [cdkDropListConnectedTo]="[todoList]"
+      class="example-list"
+      (cdkDropListDropped)="drop($event)">
+      <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
+    </div>
+  </div>
+  
+  
+  
 
 <!-- Main Body -->
 <section>
