--- a/src/app/pages/djagora-academy/mentor/finished-project/finished-project.component.html
+++ b/src/app/pages/djagora-academy/mentor/finished-project/finished-project.component.html
@@ -13,9 +13,15 @@
   </div><!-- Banner text end -->
 </div>
 
-<div class="col-md-12" *ngIf="loader==true">
-  <div class="loader20">Loading...</div>
+<div *ngIf="loader==true">
+  <div class="loader-overlay">
+      <div *ngIf="loader==true" class="loader"></div>
+  </div>
 </div>
+
+
+
+
 <div class="tout_singel" *ngIf="loader==false">
   <div class="mb-md-5">
     <!-- button back-->
