--- a/src/app/pages/djagora-academy/scrum/sprints/sprints.component.html
+++ b/src/app/pages/djagora-academy/scrum/sprints/sprints.component.html
@@ -40,6 +40,7 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                                 <span class="widget-49-pro-title">PRO-08235 DeskOpe. Website</span>
                                 <span class="widget-49-meeting-time">12:00 to 13.30 Hrs</span>
                             </div>
+                            
                         </div>
                         <ol class="widget-49-meeting-points">
                             <li class="widget-49-meeting-item"><span>Expand module is removed</span></li>
@@ -47,7 +48,8 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                             <li class="widget-49-meeting-item"><span>Session timeout increase to 30 minutes</span></li>
                         </ol>
                         <div class="widget-49-meeting-action">
-                            <a href="#" class="btn btn-sm btn-flash-border-primary" routerLink="/boards">Check board</a>
+                            <button class="btn btn-warning">edit </button>
+                            <button  class="btn btn-dark ml-2 btn-flash-border-primary" routerLink="/boards">Check board</button>
                         </div>
                     </div>
                 </div>
@@ -75,7 +77,8 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                             <li class="widget-49-meeting-item"><span>Client request to send invoice</span></li>
                         </ol>
                         <div class="widget-49-meeting-action">
-                            <a href="#" class="btn btn-sm btn-flash-border-warning" routerLink="/boards">Check board</a>
+                            <button class="btn btn-warning">edit </button>
+                            <button  class="btn btn-dark ml-2 btn-flash-border-primary" routerLink="/boards">Check board</button>
                         </div>
                     </div>
                 </div>
@@ -107,7 +110,8 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                             <li class="widget-49-meeting-item"><span>Session timeout increase to 30 minutes</span></li>
                         </ol>
                         <div class="widget-49-meeting-action">
-                            <a  class="btn btn-sm btn-flash-border-primary" routerLink="/boards">Check board</a>
+                            <button class="btn btn-warning">edit </button>
+                            <button  class="btn btn-dark ml-2 btn-flash-border-primary" routerLink="/boards">Check board</button>
                         </div>
                     </div>
                 </div>
@@ -135,7 +139,8 @@ style="background-image:url(assets/img/contact.jpg);margin-top: 8%;margin-bottom
                             <li class="widget-49-meeting-item"><span>Client request to send invoice</span></li>
                         </ol>
                         <div class="widget-49-meeting-action">
-                            <a href="#" class="btn btn-sm btn-flash-border-warning" routerLink="/boards">Check board</a>
+                            <button class="btn btn-warning" routerLink="/editsprint">edit </button>
+                            <button  class="btn btn-dark ml-2 btn-flash-border-primary" routerLink="/boards">Check board</button>
                         </div>
                     </div>
                 </div>
