--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -1,4 +1,17 @@
 <!-- Start Banner Hero -->
+
+<div *ngIf="loader==true">
+  <div class="loader-overlay">
+      <div *ngIf="loader==true" class="loader"></div>
+  </div>
+</div>
+
+
+
+
+
+
+
 <div id="template-mo-zay-hero-carousel" class="carousel slide " data-bs-ride="carousel" >
   <ol class="carousel-indicators">
     <li class="active"></li>
