--- a/src/app/pages/djagora-academy/formations/formations.component.html
+++ b/src/app/pages/djagora-academy/formations/formations.component.html
@@ -14,6 +14,14 @@
   </div><!-- Banner text end -->
 </div><!-- Banner area end -->
 
+<div *ngIf="loader==true">
+  <div class="loader-overlay">
+      <div *ngIf="loader==true" class="loader"></div>
+  </div>
+</div>
+
+
+
 
 <!------------------part2:who_we_are----------------------->
 <div class="who_we_are ">
